<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llShare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/black_translucent"
        android:clickable="false"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/stickerPreviewContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/round_corner_with_white_background"
            android:orientation="horizontal">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/stickerPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="30dp"
            android:rotation="180"
            android:src="@drawable/nav_up_arrow" />

        <RelativeLayout
            android:id="@+id/keyboardEducationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/keyboardShareScreenStep1"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_share_screen_keyboard"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textKeyboard1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/keyboard_education_share_popup"
                    android:textColor="@color/black_transparent_70"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textKeyboard2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textKeyboard1"
                    android:layout_below="@+id/textKeyboard1"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/education_bobble_keyboard"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/textKeyboard1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/textKeyboard2"
                     />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/keyboardShareScreenStep2"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_share_screen_keyboard_select"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textKeyboard3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/keyboard_education_text4"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textKeyboard3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/choose_bobble_keyboard"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/black_star"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/education_bobble_keyboard"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/black_star"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.68"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/share_via"
                android:textColor="@color/black_transparent_50"
                android:textSize="12dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageSetAsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.29"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/set_image_as"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black_transparent_50"
                android:textSize="12dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>